# ros-basics

./: .gitattributes  README.md
agitr/: package.xml
agitr/launch/: doublesim.launch  example.launch  fast_yellow.launch  reverse.launch
agitr/src/: pubvel.cpp  pubvel_toggle.cpp  pubvel_with_max.cpp  subpose.cpp
robotis/src/my_first_ros_pkg/: CMakeLists.txt
robotis/src/my_first_ros_pkg/src/: hello_world_node.cpp
robotis/src/ros_tutorials_action/: CMakeLists.txt  package.xml
robotis/src/ros_tutorials_action/src/: action_client.cpp  action_server.cpp
robotis/src/ros_tutorials_service/: CMakeLists.txt
robotis/src/ros_tutorials_service/src/: service_server.cpp
robotis/src/ros_tutorials_topic/: CMakeLists.txt
robotis/src/ros_tutorials_topic/src/: topic_subscriber.cpp
src/agitr/: CMakeLists.txt
src/agitr/launch/: triplesim.launch
src/agitr/src/: count.cpp  hello.cpp  once.cpp  reverse_cmd_vel.cpp  set_bg_color.cpp  spawn_turtle.cpp  throttle.cpp
src/ros_tutorials_service/: package.xml
src/ros_tutorials_service/src/: service_client.cpp
src/ros_tutorials_topic/: package.xml
src/ros_tutorials_topic/src/: topic_publisher.cpp
